style.css
/* Custom Styles & Configuration */

/* Setting the default font for the page */
body {
	font-family: "Inter", sans-serif;
	background-color: #f4f4f5; /* Light Gray Background */
	color: #18181b; /* Dark Zinc Text */
	overflow-x: hidden;
	cursor: none;
}

#hero {
	max-height: 920px;
}

/* Custom Cursor */
.cursor {
	position: fixed;
	width: 20px;
	height: 20px;
	background-color: #18181b;
	border-radius: 50%;
	pointer-events: none;
	transition: width 0.2s, height 0.2s, background-color 0.2s;
	z-index: 9999;
	mix-blend-mode: difference;
}

.cursor.hover {
	width: 200px;
	height: 200px;
	background-color: #fff;
}

/* Spinner for loading state */
.loader {
	border: 4px solid #d4d4d8;
	border-top: 4px solid #18181b;
	border-radius: 50%;
	width: 40px;
	height: 40px;
	animation: spin 1s linear infinite;
	margin: 20px auto;
}

/* Wrapper for hero title words to handle animation */
.hero-line {
	display: block;
	overflow: hidden;
	padding-bottom: 0.2em; /* Gives space for letter descenders */
}
.hero-line > span {
	display: block;
	padding-right: 10px;
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

/* @media (min-width: 768px) {
	.hero-line {
		padding-right: 90px;
	}
} */

